# matshare

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.rst  docker-compose.override-dev.yaml  docker-compose.yaml  manage.py  nginx.conf  package.json  pyproject.toml
data.defaults/config/: 99-defaults.conf  README.rst
data.defaults/custom_templates/matshare_ci/: README.rst
data.defaults/git_hooks/: update
data.sample/custom_templates/matshare_ci.tud/: README.rst  legal_notice.html
debian/: changelog  compile_debian_config  control  copyright  install  postinst  prerm  rules
git_hooks/: post-receive
git_initial/: .gitignore
matshare/: __init__.py  admin.py  apps.py  auth.py  context_processors.py  django_signals.py  material_building.py  middleware.py  models.py  settings.py  spooled_tasks.py  urls.py  utils.py  uwsgi_signals.py  views.py  wsgi.py
matshare/ci_templates/matshare_ci/: README.rst
matshare/ci_templates/matshare_ci.tud/: footer_operator.html  home.html
matshare/course/: spooled_tasks.py  urls.py  views.py
matshare/git/: utils.py  views.py
matshare/migrations/: 0001_initial.py  0002_auto_20200920_1530.py  0003_auto_20200921_1130.py  0004_auto_20201012_1804.py
matshare/templatetags/: matshare_util.py
matshare/user/: urls.py  views.py
scripts/: build_uwsgi  build_uwsgi.sh  collect_assets  collect_assets.sh  config  create_admin_user  docker_run  init_or_upgrade  initialize_matshare.py  manage.py  run_uwsgi.sh  update_translations  update_translations.sh
scss/: matshare.scss
uwsgi_configs/: git.ini  main.ini
(+47 files in other folders)
